--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <header>
-    <h1>Galaxy Sticky Notes Wall</h1>
+    <h1>Sticky Notes Wall</h1>
     <div class="controls">
       <label for="color">Default:</label>
       <input id="defaultColor" type="color" value="#a3e0ff" title="Default note glow color">
